<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>jp.reflexworks</groupId>
  <artifactId>reflexservlet</artifactId>
  <packaging>jar</packaging>
  <version>10.0.1</version>

  <description>Reflex Servlet</description>
  <name>Reflex Servlet</name>

  <organization>
    <name>Virtual Technology</name>
    <url>http://www.virtual-tech.net/</url>
  </organization>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <reflexcoreVersion>10.0.1</reflexcoreVersion>
    <maven.compiler.source>25</maven.compiler.source>
    <maven.compiler.target>25</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>jp.reflexworks</groupId>
      <artifactId>reflexcore</artifactId>
      <version>${reflexcoreVersion}</version>
    </dependency>
    <!-- Jetty 12.0 は jakarta servlet 4.0, 5.0, 6.0 に対応 -->
    <dependency>
      <groupId>jakarta.servlet</groupId>
      <artifactId>jakarta.servlet-api</artifactId>
      <version>6.0.0</version>
    </dependency>
    
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>2.0.17</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
    <!-- ログをlogbackで出力する場合 -->
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-core</artifactId>
      <version>1.5.32</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.5.32</version>
      <scope>test</scope>
    </dependency>

  </dependencies>

</project>
